--- a/mobile-src/android/Application/src/main/AndroidManifest.xml
+++ b/mobile-src/android/Application/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:label="@string/app_name"
         android:description="@string/intro_message"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppThemeDark">
+        android:theme="@style/AppThemeOrange">
 
         <activity android:name=".ui.ImageGridActivity"
                   android:label="@string/app_name">
@@ -45,7 +45,7 @@
             android:name=".ui.ImageDetailActivity"
             android:label="@string/app_name"
             android:parentActivityName=".ui.ImageGridActivity"
-            android:theme="@style/AppThemeDark.FullScreen" >
+            android:theme="@style/AppThemeOrange.FullScreen" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.ImageGridActivity" />
         </activity>
