--- a/mobile-src/android/Application/build.gradle
+++ b/mobile-src/android/Application/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile "com.android.support:support-v4:21.0.2"
     compile "com.android.support:gridlayout-v7:21.0.2"
     compile "com.android.support:cardview-v7:21.0.2"
+    compile 'de.greenrobot:eventbus:2.4.0'
 
 }
 
