--- a/mobile-src/android/Application/src/main/AndroidManifest.xml
+++ b/mobile-src/android/Application/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application android:allowBackup="true"
+    <application
+        android:name=".MyGalleryApplication"
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:description="@string/intro_message"
         android:icon="@drawable/ic_launcher"
