--- a/mobile-src/android/Application/src/main/AndroidManifest.xml
+++ b/mobile-src/android/Application/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:description="@string/intro_message"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:theme="@style/AppThemeDark">
 
         <activity android:name=".ui.ImageGridActivity"
