--- a/mobile-src/android/Application/build.gradle
+++ b/mobile-src/android/Application/build.gradle
@@ -17,10 +17,12 @@ repositories {
 
 dependencies {
 
-    compile "com.android.support:support-v4:21.0.2"
+    compile "com.android.support:support-v4:22.2.1"
     compile "com.android.support:gridlayout-v7:21.0.2"
     compile "com.android.support:cardview-v7:21.0.2"
     compile 'de.greenrobot:eventbus:2.4.0'
+    compile "com.fasterxml.jackson.core:jackson-core:2.5.0"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.5.0"
 
 }
 
@@ -51,6 +53,11 @@ android {
         androidTest.setRoot('tests')
         androidTest.java.srcDirs = ['tests/src']
 
+    }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
     }
 
 }
