--- a/mobile-src/android/Application/src/main/AndroidManifest.xml
+++ b/mobile-src/android/Application/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
     <application
         android:name=".MyGalleryApplication"
         android:allowBackup="true"
