--- a/mobile-template/android/AndroidManifest.xml
+++ b/mobile-template/android/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="${applicationPackage}" platformBuildVersionCode="21" platformBuildVersionName="5.0.1-1624448">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="${applicationPackage}" platformBuildVersionCode="22" platformBuildVersionName="5.1.1-1819727">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-feature android:name="android.hardware.camera" android:required="true"/>
     <application android:allowBackup="true" android:debuggable="true" android:description="@string/intro_message" android:icon="@drawable/icon" android:label="@string/app_name" android:name="com.example.android.displayingbitmaps.MyGalleryApplication" android:theme="@style/${appTheme}">
         <activity android:label="@string/app_name" android:name="com.example.android.displayingbitmaps.ui.ImageGridActivity">
             <intent-filter>
