Test iOS scenario with orange theme

--- a/mobile-src/ios/Custom.plist
+++ b/mobile-src/ios/Custom.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>appTheme</key>
-	<string>theme-dark</string>
+	<string>theme-orange</string>
 	<key>localImages</key>
 	<false/>
 </dict>
