--- a/mobile-src/ios/Custom.plist
+++ b/mobile-src/ios/Custom.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>enableLocalStorage</key>
+	<true/>
 	<key>appTheme</key>
 	<string>theme-dark</string>
 	<key>localImages</key>
