Step 6: Added picture capture and upload feature

--- a/mobile-template/ios/Custom.plist
+++ b/mobile-template/ios/Custom.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>localImages</key>
 	<${localImages}/>
+	<key>addImage</key>
+	<${addImage}/>
 	<key>enableLocalStorage</key>
 	<${enableLocalStorage}/>
 	<key>backendUrl</key>
